full update game def

--- a/outpost_2_divided_destiny-opu.yml
+++ b/outpost_2_divided_destiny-opu.yml
@@ -1,15 +1,29 @@
-game:
-  args: /OPU
-  exe: /home/tim/.local/share/games/gog/outpost-2-divided-destiny/drive_c/GOG Games/Outpost
-    2/Outpost2.exe
-  launch_configs: null
-  name: Outpost 2
-wine:
-  overrides:
-    winmm: n,b
-  version: lutris-7.2-2-x86_64
-game_slug: outpost-2-divided-destiny
-name: 'Outpost 2: Divided Destiny'
-extends: outpost-2-divided-destiny
-files:
-- opu_installer: https://outpost2.net/files/op2/game/OPUInstaller-1.4.1.exe\
+# lutris:gog:1494370738
+name: "Outpost 2: Divided Destiny OPU" 
+game_slug: outpost-2-divided-destiny-opu
+version: Installer
+slug: outpost_2_divided_destiny-opu
+runner: wine 
+
+script:
+  requires: outpost_2_divided_destiny
+  variables:
+    WINEDIR: "drive_c/GOG Games/Outpost 2"
+    # VERSION: 1.4.1
+    INSTALLER: OPUInstaller-1.4.1.exe
+  game:
+    args: /OPU
+    working_dir: $GAMEDIR/$WINEDIR
+    exe: $GAMEDIR/$WINEDIR/Outpost2.exe
+  wine:
+    overrides:
+      winmm: n,b
+  files:
+  - opu_installer: https://outpost2.net/files/op2/game/$INSTALLER
+  
+  installer:
+  - merge:
+        src: opu-installer
+        dst: $GAMEDIR/$WINEDIR
+  - execute:
+        file: $GAMEDIR/$WINEDIR/$INSTALLER
